crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_136_SachenTCU02_Mei_Loi_Siu_Ji_Metal_Fighter_Sachen_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-136-SachenTCU02/Mei Loi Siu Ji (Metal Fighter) (Sachen) [!].zip
rom_sha256=c5895c35b0e21936ab823aab8d5abea9c3b499422eff529cef644cb13af77006
frames=1141
fb_bytes=245760
cycles=33949772
audio_samples=836505
audio_fnv1a64=0feff08ee24b2e80
checkpoint f900 fb_fnv1a64=f0206063d6820f6e
checkpoint f1100 fb_fnv1a64=f57bce7b323fb203
