crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_137_Sachen8259D_Great_Wall_The_Sachen.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-137-Sachen8259D/Great Wall, The (Sachen) [!].nes
rom_sha256=2655d96ac4625c54687806e231bc8027cb4d292d2e99eae7c8ebd461021824b4
frames=1141
fb_bytes=245760
cycles=33949780
audio_samples=836505
audio_fnv1a64=fb23a9c2db6a81f8
checkpoint f900 fb_fnv1a64=466be78702d0b148
checkpoint f1100 fb_fnv1a64=466be78702d0b148
