crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_138_Sachen8259B_Silver_Eagle_Sachen_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-138-Sachen8259B/Silver Eagle (Sachen) [!].zip
rom_sha256=1863b457e4f125fe92a7ee7549df0bb932eac99f35198769be711d41408a7ebc
frames=1141
fb_bytes=245760
cycles=37902153
audio_samples=1005322
audio_fnv1a64=f86356c703e35854
checkpoint f900 fb_fnv1a64=76c9b17b5b229263
checkpoint f1100 fb_fnv1a64=d1b2bde8486d8f73
