crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_140_Jaleco140_Bio_Senshi_Dan_Increaser_Tono_Tatakai_Japan_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-140-Jaleco140/Bio Senshi Dan - Increaser Tono Tatakai (Japan).zip
rom_sha256=5d9d607b809fb6e25b9ca5ccd08208a706bad096bd6024ffb5df2493076a0fda
frames=1141
fb_bytes=245760
cycles=33949774
audio_samples=836505
audio_fnv1a64=5e4954d73e80b9d3
checkpoint f900 fb_fnv1a64=a5a32c3d22e5ca53
checkpoint f1100 fb_fnv1a64=74c4f8174176961c
