crates/rustynes-test-harness/tests/snapshots/external_coverage__mapper_140_Jaleco140_Doraemon_J_PRG0_T_Chi20090616_HOKOH_zip.snap
---
source: crates/rustynes-test-harness/tests/external_coverage.rs
expression: text
---
rom=mapper-140-Jaleco140/Doraemon (J) (PRG0) [T+Chi20090616_HOKOH].zip
rom_sha256=8c30e44fe3ff297867b76c4fdb9da8be90a861c0c02243276fc3fad4f343a185
frames=1141
fb_bytes=245760
cycles=33949783
audio_samples=836505
audio_fnv1a64=975272aaa965dd1d
checkpoint f900 fb_fnv1a64=2e7359d9d7f0bb6e
checkpoint f1100 fb_fnv1a64=ef2c3015997fec78
